# ros-template

./: README.md
auto_locate/: CMakeLists.txt  package.xml
auto_locate/cfg/: AutoLocate.cfg
auto_locate/src/: auto_locate_node.cpp
dummy_scan/: CMakeLists.txt  package.xml
dummy_scan/src/: dummy_scan_node.cpp
laser_rotate/: CMakeLists.txt  package.xml
laser_rotate/cfg/: AngleOffset.cfg
laser_rotate/src/: laser_rotate_node.cpp
lidar_anti_distortion/: CMakeLists.txt  package.xml
lidar_anti_distortion/cfg/: AntiDistortion.cfg
lidar_anti_distortion/src/: lidar_anti_distortion_node.cpp  lidar_pseudo_distortion_node.cpp
pose_transform_to_another_frame/: CMakeLists.txt  package.xml
pose_transform_to_another_frame/src/: node.cpp
publish_subscribe/: CMakeLists.txt  package.xml
publish_subscribe/src/: listener.cpp  talker.cpp  talker_with_param.cpp
quat2euler/: CMakeLists.txt  package.xml
quat2euler/src/: quat2euler_node.cpp
rosbridgecpp-client/: CMakeLists.txt
rosbridgecpp-client/src/: client.cpp
rqt_docking_helper/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
rqt_docking_helper/include/: helper_gui.h
rqt_docking_helper/resource/: helper_gui.ui
rqt_docking_helper/src/: helper_gui.cpp
tf_prefix_test/: CMakeLists.txt  package.xml
tf_prefix_test/launch/: test.launch
tf_prefix_test/src/: tf_prefix_test_node.cpp
tf_test/: CMakeLists.txt  package.xml
tf_test/launch/: test.launch
tf_test/src/: tf_test_node.cpp
